--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -20,6 +20,12 @@ body {
   background-position: left;
 }
 
+.color_fuente {
+  font-size: 100px;
+  color: green;
+  text-shadow: 1px 2px red, 4px 4px blue;
+}
+
 /* Mis trabajos */
 
 #Mis-trabajos .image-top {
